fixing wrong dto import on swagger doc
