# api/app/docs/swagger.json
@@ -39,12 +39,12 @@
                         "required": true
                     },
                     {
-                        "description": "Create report",
+                        "description": "Update report",
                         "name": "report",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Report"
+                            "$ref": "#/definitions/dto.UpdateReportDTO"
                         }
                     }
                 ],
@@ -52,7 +52,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Report"
+                            "$ref": "#/definitions/dto.UpdateReportDTO"
                         }
                     }
                 }
@@ -165,6 +165,30 @@
                 },
                 "image_url": {
                     "type": "string"
+                },
+                "priority": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.UpdateReportDTO": {
+            "type": "object",
+            "required": [
+                "external_id",
+                "image_url"
+            ],
+            "properties": {
+                "external_id": {
+                    "type": "string"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "priority": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "integer"
                 }
             }
         },
